# qml-test

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  GroupText.qml  InsertScreen.qml  ListCountries.qml  MainScreen.qml  SliceMainScreen.qml  UpdateScreen.qml  employees  main.cpp  main.qml  meddiator.cpp  meddiator.h  qml.qrc  script.mjs
app/controller/: basecontroller.cpp  employeecontroller.cpp  employeecontroller.h
app/controllers/: basecontroller.h  baseemployeecontroller.cpp  baseemployeecontroller.h  deleteemployeecontroller.cpp  deleteemployeecontroller.h  getadditionalempcontroller.h  postemployeecontroller.cpp  postemployeecontroller.h  putemployeecontroller.cpp  putemployeecontroller.h  selectedusercontroller.h
app/elements/: m_employee.cpp  m_employee.h  memployee.h
app/js/: puller.js
app/model/: additionalemp.h  countrytable.cpp  countrytable.h  data.h  employee.cpp  employee.h  employeetable.cpp  employeetable.h
app/models/: countrymodel.cpp  countrymodel.h  data.h  employeemodel.cpp  employeemodel.h  empmodel.cpp  empmodel.h
app/puller/: employeepuller.cpp  employeepuller.h
app/view/: additionalemp.h  employee.h
old_app/: CMakeLists.txt  GroupText.qml  InsertScreen.qml  dataMeddiator.h  main.cpp  main.qml  meddiator.h
old_app/controllers/: getadditionalempcontroller.cpp  getadditionalempcontroller.h  selectedusercontroller.cpp
old_app/elements/: memployee.cpp
old_app/models/: countrymodel.cpp  data.h  employeemodel.cpp  employeemodel.h  empmodel.cpp  empmodel.h  infoemployeemodel.cpp  infoemployeemodel.h
old_app/view/: additionalemp.cpp  additionalemp.h  employee.h
sqlite/: CMakeLists.txt  datasqlite.h  res.qrc  sqlitemanager.cpp  sqlitemanager.h  sqlrenamer.cpp  sqlrenamer.h
sqlite-test/: CMakeLists.txt  sqlite-test.cpp
sqlite/assets/create/: index_additionally_country.sql
sqlite/assets/create-table/: additionally.sql  additionally_country.sql  country.sql  employees.sql
sqlite/assets/default-insert/: country.sql
sqlite/assets/delete/: employee.sql
sqlite/assets/insert/: employee.sql
sqlite/assets/select/: countries.sql  employees.sql  last_employee.sql
sqlite/assets/update/: employee.sql
test-db/: database
